--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.11",
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "ts-node-dev": "^1.0.0",
